Add reactive CollectionPreparer variant.